--- a/project-styles.css
+++ b/project-styles.css
@@ -515,6 +515,7 @@ footer {
     position: relative;
     width: 100%;
     max-width: 800px;
+    max-height: 450px;
     margin: 0 auto;
     background-color: #0b0603;
     border-radius: 16px;
@@ -541,6 +542,7 @@ footer {
 
 .carousel-image {
     width: 100%;
+/*     height: 100%; */
     flex-shrink: 0;
     display: block;
     scroll-snap-align: center;
