--- a/project-styles.css
+++ b/project-styles.css
@@ -510,10 +510,13 @@ footer {
     opacity: 1;
     pointer-events: all;
     transition: opacity 0.3s ease;
-}.carousel-container {
+}
+
+.carousel-container {
     position: relative;
     overflow: hidden;
-    max-width: 800px;
+    max-width: 1000px;
+    max-height: 562px;
     margin: 0 auto;
     border-radius: 16px;
     box-shadow: 0 6px 20px var(--shadow-glow);
